# pixelquery

./: .gitignore  .pre-commit-config.yaml  BENCHMARK_RESULTS.md  README.md  benchmark_optimization.py  benchmark_quick_test.py  benchmark_rust_comparison.py  benchmark_rust_simple.py  benchmark_rust_vs_python.py  pyproject.toml  test_real_data.py
.github/workflows/: ci.yml  release.yml
benchmarks/: bench_resample.py
docs/: api-examples.md  hybrid_architecture.md  iceberg-integration.md  implementation_plan.md  interfaces-report.md  optimization_summary.md  package-structure.md  performance_comparison.md  phase2_rust_completion_report.md  pixelquery_design.md  refactoring-progress.md
examples/: README.md  demo_timeseries.py  test_demo.py
pixelquery/: __init__.py  sample_data.py
pixelquery/_internal/: __init__.py  codecs.py
pixelquery/_internal/storage/: __init__.py  arrow_chunk.py  base.py  geoparquet.py  iceberg_schema.py  iceberg_storage.py  icechunk_storage.py
pixelquery/_internal/transactions/: __init__.py  base.py  two_phase.py
pixelquery/catalog/: __init__.py  iceberg.py  icechunk_catalog.py  local.py  product_profile.py
pixelquery/cli/: __init__.py  info.py  migrate.py  recovery.py
pixelquery/core/: __init__.py  api.py  bandmath.py  dataarray.py  dataset.py  exceptions.py  interfaces.py  result.py  timeseries.py
pixelquery/grid/: __init__.py  base.py  tile_grid.py
pixelquery/io/: __init__.py  auto_ingest.py  cog.py  cog_metadata.py  iceberg_reader.py  iceberg_writer.py  icechunk_reader.py  icechunk_writer.py  ingest.py
pixelquery/products/: __init__.py  base.py
pixelquery/products/profiles/: __init__.py  landsat8.py  sentinel2.py
pixelquery/query/: __init__.py  executor.py  spatial.py
pixelquery/testing/: __init__.py
pixelquery/util/: __init__.py  migrate.py  recovery.py
pixelquery_core/: .gitignore  Cargo.toml
pixelquery_core/src/: lib.rs
pixelquery_core/src/processing/: mod.rs  resample.rs
pixelquery_core/src/storage/: arrow_chunk.rs  mod.rs
tests/: __init__.py  conftest.py
tests/_internal/: __init__.py
tests/_internal/storage/: __init__.py  test_arrow_chunk.py  test_geoparquet.py  test_iceberg_storage.py
tests/_internal/transactions/: __init__.py  test_two_phase.py
tests/catalog/: __init__.py  test_iceberg.py  test_local.py
tests/core/: test_api.py  test_auto_ingest.py  test_bandmath.py  test_cloud_mask.py  test_cog_metadata.py  test_dataarray.py  test_dataset.py  test_dataset_selection.py  test_exceptions.py  test_product_profile.py  test_rust_arrow.py  test_rust_resample.py
tests/grid/: __init__.py  test_tile_grid.py
tests/integration/: test_end_to_end.py  test_icechunk_e2e.py
tests/io/: __init__.py  test_cog.py  test_iceberg_io.py  test_ingest.py
tests/products/: __init__.py  test_profiles.py
tests/query/: __init__.py  test_executor.py
tests/util/: test_migrate.py  test_recovery.py
