[project]
name = "pixelquery"
version = "0.1.3"
description = "Turn your COG files into an analysis-ready time-series data cube"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "PixelQuery Contributors"}
]
keywords = [
    "satellite",
    "imagery",
    "geospatial",
    "raster",
    "icechunk",
    "zarr",
    "virtual",
    "COG",
    "data-cube",
    "time-series",
    "remote-sensing",
    "earth-observation"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Typing :: Typed",
]

dependencies = [
    "numpy>=1.24.0",
]

[project.optional-dependencies]
# Full dependencies for production use (COG ingestion, geospatial operations)
full = [
    "geopandas>=0.14.0",
    "rasterio>=1.3.0",
    "scipy>=1.11.0",
    "duckdb>=0.10.0",
    "shapely>=2.0.0",
]

# Icechunk virtual zarr storage (zero-copy COG references)
icechunk = [
    "icechunk>=1.1.18",
    "virtualizarr>=2.4.0",
    "virtual-tiff>=0.2.1",
    "zarr>=3.1.5",
    "obstore>=0.5.0",
    "imagecodecs>=2024.1.0",
    "xarray>=2023.1.0",
    "dask[array]>=2023.1.0",
    "rasterio>=1.3.0",
    "pandas>=1.5.0",
]

# Legacy Iceberg backend (deprecated, use icechunk instead)
legacy = [
    "pyarrow>=17.0.0",
    "pyiceberg>=0.6.0",
    "geopandas>=0.14.0",
    "rasterio>=1.3.0",
    "scipy>=1.11.0",
    "duckdb>=0.10.0",
    "shapely>=2.0.0",
]

# S3 support
s3 = [
    "pixelquery[icechunk]",
    "boto3>=1.28.0",
]

# xarray integration
xarray = [
    "xarray>=2023.1.0",
    "netCDF4>=1.6.0",
    "dask[array]>=2023.1.0",
]

# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "ruff>=0.8.0",
    "pre-commit>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/pixelquery/pixelquery"
Documentation = "https://github.com/pixelquery/pixelquery#readme"
Repository = "https://github.com/pixelquery/pixelquery"
Issues = "https://github.com/pixelquery/pixelquery/issues"
Changelog = "https://github.com/pixelquery/pixelquery/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pixelquery"]

[tool.hatch.build.targets.sdist]
exclude = [
    "pixelquery_core/",
    "benchmarks/",
    "test_*.py",
    ".sisyphus/",
    ".claude/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=pixelquery",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["pixelquery"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pyiceberg.*",
    "geopandas.*",
    "rasterio.*",
    "duckdb.*",
    "shapely.*",
    "icechunk.*",
    "zarr.*",
    "virtualizarr.*",
    "obstore.*",
]
ignore_missing_imports = true

# pyiceberg type stubs differ across versions/environments
[[tool.mypy.overrides]]
module = [
    "pixelquery._internal.storage.iceberg_storage",
    "pixelquery.io.iceberg_reader",
]
warn_unused_ignores = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "SIM108", # use ternary operator (less readable)
    "RUF012", # mutable class attributes
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]
"tests/*" = ["F401", "F811", "S101"]
"pixelquery/core/bandmath.py" = ["S307"]  # eval usage in expression()

[tool.ruff.lint.isort]
known-first-party = ["pixelquery"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
