[package]
name = "pixelquery_core"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust extensions for PixelQuery"
authors = ["PixelQuery Team"]
license = "MIT"

[lib]
name = "pixelquery_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
ndarray = "0.16"
rayon = "1.10"  # For parallel processing

# Arrow integration (Phase 2.2)
arrow = { version = "53", default-features = false, features = ["ipc"] }
chrono = "0.4"

[features]
default = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
